<resources>
    <string name="app_name">NhkBangumi</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="pref_header_general">一般</string>

    <string-array name="list_service_entries">
        <item>TV</item>
        <item>ラジオ</item>
        <item>ネットラジオ</item>
    </string-array>

    <string-array name="list_service_entry_values">
        <item>tv</item>
        <item>radio</item>
        <item>netradio</item>
    </string-array>

    <string name="list_service_entry_defaultValues">tv</string>

    <!-- 地域  -->
    <string-array name="list_area_entries">
        <item>札幌</item>
        <item>函館</item>
        <item>旭川</item>
        <item>帯広</item>
        <item>釧路</item>
        <item>北見</item>
        <item>室蘭</item>
        <item>青森</item>
        <item>盛岡</item>
        <item>仙台</item>
        <item>秋田</item>
        <item>山形</item>
        <item>福島</item>
        <item>水戸</item>
        <item>宇都宮</item>
        <item>前橋</item>
        <item>さいたま</item>
        <item>千葉</item>
        <item>東京</item>
        <item>横浜</item>
        <item>新潟</item>
        <item>富山</item>
        <item>金沢</item>
        <item>福井</item>
        <item>甲府</item>
        <item>長野</item>
        <item>岐阜</item>
        <item>静岡</item>
        <item>名古屋</item>
        <item>津</item>
        <item>大津</item>
        <item>京都</item>
        <item>大阪</item>
        <item>神戸</item>
        <item>奈良</item>
        <item>和歌山</item>
        <item>鳥取</item>
        <item>松江</item>
        <item>岡山</item>
        <item>広島</item>
        <item>山口</item>
        <item>徳島</item>
        <item>高松</item>
        <item>松山</item>
        <item>高知</item>
        <item>福岡</item>
        <item>北九州</item>
        <item>佐賀</item>
        <item>長崎</item>
        <item>熊本</item>
        <item>大分</item>
        <item>宮崎</item>
        <item>鹿児島</item>
        <item>沖縄</item>
    </string-array>

    <string-array name="list_area_entry_values">
        <item>010</item>
        <item>011</item>
        <item>012</item>
        <item>013</item>
        <item>014</item>
        <item>015</item>
        <item>016</item>
        <item>020</item>
        <item>030</item>
        <item>040</item>
        <item>050</item>
        <item>060</item>
        <item>070</item>
        <item>080</item>
        <item>090</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
        <item>210</item>
        <item>220</item>
        <item>230</item>
        <item>240</item>
        <item>250</item>
        <item>260</item>
        <item>270</item>
        <item>280</item>
        <item>290</item>
        <item>300</item>
        <item>310</item>
        <item>320</item>
        <item>330</item>
        <item>340</item>
        <item>350</item>
        <item>360</item>
        <item>370</item>
        <item>380</item>
        <item>390</item>
        <item>400</item>
        <item>401</item>
        <item>410</item>
        <item>420</item>
        <item>430</item>
        <item>440</item>
        <item>450</item>
        <item>460</item>
        <item>470</item>
    </string-array>
    <!-- 地域  -->


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="NowOnAirLabel">現在放送中</string>
</resources>
